--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@
 name: HackCU Team
 og: assets/img/og.png
 logo: assets/img/logo.png
+events_bg_img: /assets/img/people.jpg
 original_repo: https://github.com/hackcu/events
 description: Info on how to be part of the HackCU team
 ga: UA-109088240-1
