--- a/_data/values.yml
+++ b/_data/values.yml
@@ -13,3 +13,5 @@
 - title: Student run and independent
   description: "HackCU is and always will be an independent entity run by students at CU Boulder.
   We won’t be sellouts."
+- title: Inspire
+  description: Inspire people, to reach for more. Anyone can change the world around themselves!
