--- a/_data/team.yml
+++ b/_data/team.yml
@@ -18,7 +18,7 @@
 - name: Conor Parrish
   title: Director of Logistics
   img-src: assets/img/team/conor.jpg
-  url: https://conorparrish.com
+  url: http://conorparrish.com
 
 - name: Drew Casner
   title: Director of Hacker Experience
