update design description

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -14,4 +14,4 @@
 #   description: "Work organizing monthly workshops as well as any side event at our main events. 
 #   We are looking for people to help us improve the experience hackers get at our events."
 - title: Design
-  description: "We are looking for talented designers to work both with the tech team and marketing team to make our events possible and improve the experience of our attendees."
+  description: "We are looking for designers to work both with the tech team and marketing team to make our events possible. Design our events experiences, stickers, swag, posters..."
