update marketing description

--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -9,7 +9,7 @@
 #   description: "Our tech team builds and maintains a variety of open-source projects. 
 #     Learn from some of the best developers on campus, and help build our tech stack."
 - title: Marketing
-  description: "Help get the word out about our events. Reach out to communities on campus and nearby and help people have the best experience at our events"
+  description: "Help get the word out about our events. Reach out to campus as well as the broader Boulder tech community and help people have the best experience at our events."
 # - title: Hacker Experience
 #   description: "Work organizing monthly workshops as well as any side event at our main events. 
 #   We are looking for people to help us improve the experience hackers get at our events."
