add all our events together

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ team-description: "Our team comprises of innovative self starters who constantly
 companies-description: "HackCU helps set up its team members for great careers in technology. We pride ourselves on teaching 
     our team members how to be great employees and founders. Below is a list of some of the companies our team members and alumni
     have gone on to intern at, work for, or found."
+events-description: "To achieve our goals, at HackCU we organize events through the year. Here's a list of the different types of events we organize through the academic year."
 
 # Social media + community variables
 twitter: hackcu
