Update Apara's name

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,4 +1,4 @@
-- name: Aparajithan Venkateswaran
+- name: Apara Venkat
   title: Organizer
   img-src: assets/img/team/apara.jpg
   url: https://aparav.github.io
