update my position

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -4,7 +4,7 @@
   url: https://aparav.github.io
 
 - name: Carl Cortright
-  title: Director
+  title: Advisor
   img-src: assets/img/team/carl.jpg
   url: https://carlcortright.com
 
