add phase and close applications

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -13,3 +13,7 @@
 -  title: Workshops
    url: https://events.hackcu.org
    img-src: /assets/img/events/workshops.jpg
+
+-  title: Phase
+   url: https://phase.hackcu.org
+   img-src: /assets/img/events/phase.jpg
