--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -8,10 +8,10 @@
 # - title: Tech
 #   description: "Our tech team builds and maintains a variety of open-source projects. 
 #     Learn from some of the best developers on campus, and help build our tech stack."
-- title: Marketing
-  description: "Help get the word out about our events. Reach out to campus as well as the broader Boulder tech community and help people have the best experience at our events."
+# - title: Marketing
+#   description: "Help get the word out about our events. Reach out to campus as well as the broader Boulder tech community and help people have the best experience at our events."
 # - title: Hacker Experience
 #   description: "Work organizing monthly workshops as well as any side event at our main events. 
 #   We are looking for people to help us improve the experience hackers get at our events."
-- title: Design
-  description: "We are looking for designers to work both with the tech team and marketing team to make our events possible. Design our events experiences, stickers, swag, posters..."
+# - title: Design
+#   description: "We are looking for designers to work both with the tech team and marketing team to make our events possible. Design our events experiences, stickers, swag, posters..."
