Uploaded zahraa's img

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -59,7 +59,8 @@
   title: Organizer
   url: https://github.com/naby
 
-- name: David Lopez
+- name: Zahraa Abbasi
+  img-src: assets/img/team/zahraa.jpg
   title: Organizer
 
 - name: Abbigail Nicholson
