Remove security cert from my weblink

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -16,7 +16,7 @@
 - name: Elliot Whitehead
   title: Hacker Experience Director
   img-src: assets/img/team/elliot.jpg
-  url: https://elliotwhitehead.com
+  url: http://elliotwhitehead.com
 
 - name: Gerard Casas Saez
   title: Tech Director
