--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -1,17 +1,17 @@
 # All of our open positions
-- title: Sponsorship
-  description: "Every year we raise money to make our events possible. 
-    In this role you will get to work directly with some of the best companies in tech."
-- title: Logistics
-  description: "Work with campus stakeholders and suppliers to host the largest 
-    student hackathon in the rocky mountains"
-- title: Tech
-  description: "Our tech team builds and maintains a variety of open-source projects. 
-    Learn from some of the best developers on campus, and help build our tech stack."
-- title: Marketing
-  description: "Help get the word out about our events. Reach out to campus as well as the broader Boulder tech community and help people have the best experience at our events."
-- title: Experience
-  description: "Work organizing monthly workshops as well as any side event at our main events. 
-  We are looking for people to help us improve the experience hackers get at our events."
-- title: Design
-  description: "We are looking for designers to work both with the tech team and marketing team to make our events possible. Design our events experiences, stickers, swag, posters..."
+#- title: Sponsorship
+#  description: "Every year we raise money to make our events possible. 
+#    In this role you will get to work directly with some of the best companies in tech."
+#- title: Logistics
+#  description: "Work with campus stakeholders and suppliers to host the largest 
+#    student hackathon in the rocky mountains"
+#- title: Tech
+#  description: "Our tech team builds and maintains a variety of open-source projects. 
+#    Learn from some of the best developers on campus, and help build our tech stack."
+#- title: Marketing
+#  description: "Help get the word out about our events. Reach out to campus as well as the broader Boulder tech community and help people have the best experience at our events."
+#- title: Experience
+#  description: "Work organizing monthly workshops as well as any side event at our main events. 
+#  We are looking for people to help us improve the experience hackers get at our events."
+#- title: Design
+#  description: "We are looking for designers to work both with the tech team and marketing team to make our events possible. Design our events experiences, stickers, swag, posters..."
