--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3,48 +3,20 @@
   img-src: assets/img/team/apara.jpg
   url: https://aparav.github.io
 
-- name: Carl Cortright
-  title: Advisor
-  img-src: assets/img/team/carl.jpg
-  url: https://carlcortright.com
-
-- name: Drew Casner
-  title: Advisor
-  img-src: assets/img/team/drew.jpg
-  url: https://github.com/Andrew-Casner
-
 - name: Elliot Whitehead
   title: Hacker Experience Director
   img-src: assets/img/team/elliot.jpg
   url: http://elliotwhitehead.com
-
-- name: Gerard Casas Saez
-  title: Tech Director
-  img-src: assets/img/team/gerard.jpg
-  url: http://gerard.space
 
 - name: Kevin Yang
   title: Marketing Director
   img-src: assets/img/team/kevin.jpg
   url: http://keyaa.github.io/
 
-- name: Oliver Collins
-  title: Finance Director
-  img-src: assets/img/team/oliver.jpg
-  url: http://olivr.io
-
 - name: Shubha Swamy
   title: Logistics Director
   img-src: assets/img/team/shubha.jpg
   url: http://shubhaswamy.com
-
-- name: Will Dickinson
-  title: Finance Director
-  img-src: assets/img/team/will.jpg
-  url: https://www.linkedin.com/in/williamjdickinson
-
-- name: Jake Lai
-  title: Organizer
 
 - name: Mackenzie Lobato
   title: Organizer
@@ -69,6 +41,7 @@
 
 - name: Priyanka Karki
   title: Organizer
+  url: https://github.com/priyankarki
 
 - name: Matthew Strong
   title: Organizer
@@ -79,3 +52,32 @@
   img-src: assets/img/team/devon.jpg
   url: https://github.com/devonsoto77/
 
+- name: Parth Adroja
+  title: Organizer
+
+- name: Rami Mouro
+  title: Organizer
+
+- name: Aren Dalloul
+  title: Organizer
+
+- name: Oceane Andreis
+  title: Organizer
+
+- name: Soumyajyoti Bhattacharya
+  title: Organizer
+
+- name: Byungjin Kim
+  title: Organizer
+
+- name: Tahmina Ahmad
+  title: Organizer
+
+- name: Cathleen Samson
+  title: Organizer
+
+- name: Adam Chehadi
+  title: Organizer
+
+- name: Animesh Gupta
+  title: Organizer
