added msft to companies list

--- a/_data/companies.yml
+++ b/_data/companies.yml
@@ -4,6 +4,9 @@
 - url: https://twitter.com
   img-src: assets/img/companies/twitter.png
 
+- url: https://microsoft.com
+  img-src: assets/img/companies/microsoft.png
+
 - url: https://uber.com
   img-src: assets/img/companies/uber.png
 
