--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer_text_color: "#666666"
 author: HackCU
 mission: "Bring people together to create, learn, and have fun!"
 story: "HackCU began four years ago when a group of passionate students wanted to provide other students
-   the time and space to express their crativity and work on things they usually don't get a chance to.
+   the time and space to express their creativity and work on things they usually don't get a chance to.
    Since then we’ve been committed to fulfilling our mission of bringing students high-quality, inclusive
    events open to everyone irrespective of their experience."
 team-description: "Our team comprises of innovative self starters who constantly want to empower the community.
