--- a/_data/values.yml
+++ b/_data/values.yml
@@ -3,12 +3,12 @@
   description: "Everything we do is aimed at having hackers enjoy their time at our events."
 - title: Open Source
   description: "HackCU will be open to share its knowledge to anyone interested and to teach 
-  other students what we learn. This means all of our projects will be opensourced."
+  other students what we learn. This means all of our projects will be open-sourced."
 - title: Anyone is HackCU
   description: "We welcome everyone regardless of their background, gender, race, major, or
   level of experience."
 - title: Self-improvement
-  description: "At all times, HackCU encourages hackers and team members to improve, to learn and to
+  description: "At all times, HackCU encourages hackers and team members to improve, to learn, and to
   push themselves beyond their limits."
 - title: Student run and independent
   description: "HackCU is and always will be an independent entity run by students at CU Boulder.
