--- a/_data/team.yml
+++ b/_data/team.yml
@@ -82,7 +82,7 @@
 - name: Ryan Shea
   title: Organizer
   url: https://shea.cool/
-  img-src: assets/img/team/ryan.jpg
+  img-src: assets/img/team/ryan.jpeg
 
 - name: Kyle Pfromer
   title: Organizer
