--- a/_data/team.yml
+++ b/_data/team.yml
@@ -40,7 +40,7 @@
 - name: Matthew Strong
   title: Tech Director
   url: https://github.com/peasant98
-  img-src: assets/img/team/matt.jpg
+  img-src: assets/img/team/matt.jpeg
 
 - name: Parth Adroja
   title: Organizer
