new company as well.

--- a/_data/companies.yml
+++ b/_data/companies.yml
@@ -7,6 +7,9 @@
 - url: https://microsoft.com
   img-src: assets/img/companies/microsoft.png
 
+- url: https://www.amazon.com/
+  img-src: assets/img/companies/amazon.png  
+
 - url: https://uber.com
   img-src: assets/img/companies/uber.png
 
