--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ footer_text_color: "#666666"
 # Author variables
 author: HackCU
 mission: "Bring people together to create, learn, and have fun!"
-story: "HackCU began four years ago when a group of passionate students wanted to provide other students
+story: "HackCU began in 2014 when a group of passionate students wanted to provide other students
    the time and space to express their creativity and work on things they usually don't get a chance to.
    Since then we’ve been committed to fulfilling our mission of bringing students high-quality, inclusive
    events open to everyone irrespective of their experience."
