--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site variables
 name: HackCU Team
 og: assets/img/og.png
-logo: assets/img/logo.png
+logo: assets/img/hackcu6_logo.png
 events_bg_img: /assets/img/people.jpg
 original_repo: https://github.com/hackcu/team
 description: Do you like HackCU? Join our team!
