--- a/_data/team.yml
+++ b/_data/team.yml
@@ -78,3 +78,8 @@
 - name: Kyle Pfromer
   title: Organizer
   img-src: assets/img/team/kyle.jpg
+
+- name: Dhruv Patel
+  title: Organizer
+  url: https://github.com/dhruvpatelaj
+  img-src: assets/img/team/dhruv.jpg
