--- a/_data/team.yml
+++ b/_data/team.yml
@@ -33,7 +33,7 @@
   img-src: assets/img/team/abbi.jpg
 
 - name: Priyanka Karki
-  title: Hacker Experience Director
+  title: Co-Director
   url: https://github.com/priyankarki
   img-src: assets/img/team/priyanka.jpg
 
