--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ team-description: "Our team comprises of innovative self starters who constantly
 
 companies-description: "HackCU helps set up its team members for great careers in technology. We pride ourselves on teaching 
     our team members how to be great employees and founders. Below is a list of some of the companies our team members and alumni
-    have gone on to intern at, work for, or found."
+    have gone on to intern at, work for, or founded."
 events-description: "Events we organize to achieve our mission."
 
 # Social media + community variables
