--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -1,6 +1,6 @@
 # All of our open positions
 - title: Finance
-  description: "Every year we raise money to make our events possible. 
+  description: "Every year, we raise money to make our events possible. 
     In this role, you'll get to work directly with some of the best companies in tech."
 - title: Logistics
   description: "Put your event planning expertise to work and collaborate with campus stakeholders, third party services, sponsors, and vendors to organize 
@@ -12,5 +12,5 @@
   description: "Work with various marketing services and social media platforms to help get the word out 
     about our events to the campus, the broader Boulder community, non-CU students, and more!"
 - title: Workshops
-  description: "HackCU hosts some of the most valuable technical and nontechnical workshops on campus in collaboration with our team members, industry representatives, and CU Boulder staff! Help organize a variety of different workshops 
+  description: "HackCU hosts some of the most valuable technical and non-technical workshops on campus in collaboration with our team members, industry representatives, and CU Boulder staff! Help organize a variety of different workshops 
     at our events that are catered to all skill levels."
