add zahraa new pic and link.

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -24,8 +24,8 @@
 
 - name: Zahraa Abbasi
   title: Marketing Director
-  url: https://github.com/zahraaabbasi
-  img-src: assets/img/team/zahraa.jpg
+  url: https://www.linkedin.com/in/zahraaabbasi
+  img-src: assets/img/team/zahraa.jpeg
 
 - name: Abbigail Nicholson
   title: Logistics Director
