update priyanka link

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -34,7 +34,7 @@
 
 - name: Priyanka Karki
   title: Co-Director
-  url: https://github.com/priyankarki
+  url: https://www.linkedin.com/in/priyankarki
   img-src: assets/img/team/priyanka.jpg
 
 - name: Matthew Strong
