--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -1,16 +1,16 @@
-# All of our open positions
-- title: Finance
-  description: "Every year, we raise money to make our events possible. 
-    In this role, you'll get to work directly with some of the best companies in tech."
-- title: Logistics
-  description: "Put your event planning expertise to work and collaborate with campus stakeholders, third party services, sponsors, and vendors to organize 
-    all aspects of our events, including food and all other accommodations!"
-- title: Tech
-  description: "Our tech team builds and maintains a variety of open-source projects. Learn from some of the best developers on campus, 
-    and help build our tech stack by working on our various sites and platforms."
-- title: Marketing
-  description: "Work with various marketing services and social media platforms to help get the word out 
-    about our events to the campus, the broader Boulder community, non-CU students, and more!"
-- title: Workshops
-  description: "HackCU hosts some of the most valuable technical and non-technical workshops on campus in collaboration with our team members, industry representatives, and CU Boulder staff! Help organize a variety of different workshops 
-    at our events that are catered to all skill levels."
+# # All of our open positions
+# - title: Finance
+#   description: "Every year, we raise money to make our events possible. 
+#     In this role, you'll get to work directly with some of the best companies in tech."
+# - title: Logistics
+#   description: "Put your event planning expertise to work and collaborate with campus stakeholders, third party services, sponsors, and vendors to organize 
+#     all aspects of our events, including food and all other accommodations!"
+# - title: Tech
+#   description: "Our tech team builds and maintains a variety of open-source projects. Learn from some of the best developers on campus, 
+#     and help build our tech stack by working on our various sites and platforms."
+# - title: Marketing
+#   description: "Work with various marketing services and social media platforms to help get the word out 
+#     about our events to the campus, the broader Boulder community, non-CU students, and more!"
+# - title: Workshops
+#   description: "HackCU hosts some of the most valuable technical and non-technical workshops on campus in collaboration with our team members, industry representatives, and CU Boulder staff! Help organize a variety of different workshops 
+#     at our events that are catered to all skill levels."
